--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,6 +4,7 @@
       Wall Messages
     </ion-title>
     <ion-buttons end>
+      <button ion-button (click)="logout()"><ion-icon name="log-out"></ion-icon></button>
       <button ion-button (click)="showComposing()"><ion-icon name="add"></ion-icon></button>
     </ion-buttons>
   </ion-navbar>
